Make use of the Base64 encoder of the JRE8